@@ -89,7 +89,16 @@ show_header('GENI Portal: Slices',  $TAB_SLICES);
       $('.rawRSpec').each(function() {
         $(this).attr('style', '');
       });
-      $(this).attr('style', 'display: none;');
+      $(this).parent().attr('style', 'display: none;');
+      $('#hideRawResource').parent().attr('style', '');
+    });
+
+    $('#hideRawResource').click(function() {
+      $('.rawRSpec').each(function() {
+        $(this).attr('style', 'display: none;');
+      });
+      $(this).parent().attr('style', 'display: none;');
+      $('#rawResource').parent().attr('style', '');
     });
   });
 </script>
@@ -124,9 +133,10 @@ if ($pretty) {
     $am_id_str = "";
   }
 
-  print "<p><a id='rawResource' style='cursor: pointer;'>Raw Resource Specification</a></p>";
 }
 
+print "<p><a id='rawResource' style='cursor: pointer;'>Show Raw Resource Specification</a></p>";
+print "<p style='display:none;'><a id='hideRawResource' style='cursor: pointer;'>Hide Raw Resource Specification</a></p>";
 print "<hr/><p>";
 print "<a href='slices.php'>Back to All slices</a>";
 print "<br/>";
