@@ -8,6 +8,7 @@
  * Update dragon.maxgigapop SSL cert (again). (#1040)
  * Added in new slice page
  * Fixed php errors on listresources and slice pages
+ * Added Hide option for Raw Resource Specification on listresources
 
 == 2.15 ==
  * Display OpenID URL on profile page (#290)
